force-app/main/default/objects/ExerciseResult__c/ExerciseResult__c.object-meta.xml
<CustomObject>
    <description>1回のトレーニング内で実施した個別種目の実績を管理するオブジェクト。</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi>
    <label>種目実績</label><nameField><displayFormat>ER-{00000}</displayFormat><label>種目実績番号</label><type>AutoNumber</type></nameField><pluralLabel>種目実績</pluralLabel><sharingModel>ControlledByParent</sharingModel>
</CustomObject>