force-app/main/default/objects/ExerciseResult__c/fields/Comment__c.field-meta.xml
<CustomField><fullName>Comment__c</fullName><label>コメント</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>