force-app/main/default/objects/ExerciseResult__c/fields/DurationSeconds__c.field-meta.xml
<CustomField><fullName>DurationSeconds__c</fullName><label>秒数</label><precision>4</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>