force-app/main/default/objects/ExerciseResult__c/fields/ExerciseMaster__c.field-meta.xml
<CustomField><fullName>ExerciseMaster__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>実施した種目</description><label>種目マスタ</label><referenceTo>ExerciseMaster__c</referenceTo><relationshipLabel>種目実績</relationshipLabel><relationshipName>ExerciseResults</relationshipName><required>false</required><type>Lookup</type></CustomField>