force-app/main/default/objects/ExerciseResult__c/fields/FeltBodyPart__c.field-meta.xml
<CustomField><fullName>FeltBodyPart__c</fullName><externalId>false</externalId><label>効いた部位</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>