force-app/main/default/objects/ExerciseResult__c/fields/HasPain__c.field-meta.xml
<CustomField><fullName>HasPain__c</fullName><defaultValue>false</defaultValue><label>痛み有無</label><type>Checkbox</type></CustomField>