force-app/main/default/objects/ExerciseResult__c/fields/IntensityLevel__c.field-meta.xml
<CustomField><fullName>IntensityLevel__c</fullName><description>1〜5の数値を想定</description><label>きつさ</label><precision>1</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>