force-app/main/default/objects/ExerciseResult__c/fields/PainDetail__c.field-meta.xml
<CustomField><fullName>PainDetail__c</fullName><label>痛みの詳細</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>