force-app/main/default/objects/ExerciseResult__c/fields/Reps__c.field-meta.xml
<CustomField><fullName>Reps__c</fullName><label>回数</label><precision>4</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>