force-app/main/default/objects/ExerciseResult__c/fields/Sets__c.field-meta.xml
<CustomField><fullName>Sets__c</fullName><label>セット数</label><precision>2</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>