force-app/main/default/objects/ExerciseResult__c/fields/WorkoutSession__c.field-meta.xml
<CustomField><fullName>WorkoutSession__c</fullName><description>この種目実績が属するトレーニング実績</description><label>トレーニング実績</label><referenceTo>WorkoutSession__c</referenceTo><relationshipLabel>種目実績</relationshipLabel><relationshipName>ExerciseResults</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>