force-app/main/default/objects/ExerciseResult__c/validationRules/IntensityBetweenOneAndFive.validationRule-meta.xml
<ValidationRule><fullName>IntensityBetweenOneAndFive</fullName><active>true</active><description>きつさを1〜5に制限する。</description><errorConditionFormula>AND(NOT(ISBLANK(IntensityLevel__c)), OR(IntensityLevel__c &lt; 1, IntensityLevel__c &gt; 5))</errorConditionFormula><errorDisplayField>IntensityLevel__c</errorDisplayField><errorMessage>きつさは1から5の範囲で入力してください。</errorMessage></ValidationRule>