force-app/main/default/objects/ExerciseResult__c/validationRules/PainDetailRequiredWhenPain.validationRule-meta.xml
<ValidationRule><fullName>PainDetailRequiredWhenPain</fullName><active>true</active><description>痛みがある場合に詳細の記録を必須とする。</description><errorConditionFormula>AND(HasPain__c, ISBLANK(PainDetail__c))</errorConditionFormula><errorDisplayField>PainDetail__c</errorDisplayField><errorMessage>痛みがある場合は痛みの詳細を入力してください。</errorMessage></ValidationRule>